# exqudens-cpp-vulkan

./: .gitignore  CMakeLists.txt  CMakePresets.json  Jenkinsfile  conanfile.py  glslc-conanfile.py  name-version.json  name-version.txt  package-config.cmake.in  readme.md  test-conanfile.py  util.cmake  vvl-conanfile.py
cmake/: util.cmake
src/main/cpp/exqudens/: vulkan.hpp
src/main/cpp/exqudens/vulkan/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandBuffers.hpp  CommandPool.cpp  CommandPool.hpp  Context.hpp  DebugUtilsMessenger.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  DescriptorSets.hpp  Device.cpp  Device.hpp  DeviceMemory.hpp  Fence.cpp  Fence.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsPipelineCreateInfo.cpp  GraphicsPipelineCreateInfo.hpp  Image.cpp  Image.hpp  ImageView.cpp  ImageView.hpp  Instance.cpp  Instance.hpp  Messenger.cpp  Messenger.hpp  MessengerCreateInfo.cpp  MessengerCreateInfo.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  PipelineCache.hpp  (+32 more)
src/test/cpp/: StringVector.hpp  TestApplication.cpp  TestApplication.hpp  TestConfiguration.cpp  TestConfiguration.hpp  TestGlfwUtils.cpp  TestGlfwUtils.hpp  TestLogging.cpp  TestLogging.hpp  TestMacros.hpp  TestUtils.cpp  TestUtils.hpp
src/test/cpp/exqudens/vulkan/: CameraContext.cpp  CameraContext.hpp  Context.cpp  Context.hpp  DataContext.cpp  DataContext.hpp  Functions.hpp  LightContext.cpp  LightContext.hpp  OtherTests.hpp  TestUtilsTests.hpp  Tests.hpp  Tests1.hpp  TinyObjLoaderTests.hpp  Ui1Tests.hpp  Ui2Tests.hpp  UiTests.hpp  UiTests1.hpp  UiTestsA.hpp  UniformBufferObject.hpp  Vertex.hpp
src/test/cpp/gui/: VulkanTutorial10GuiTests.hpp  VulkanTutorial11GuiTests.hpp  VulkanTutorial1GuiTests.hpp  VulkanTutorial2GuiTests.hpp  VulkanTutorial3GuiTests.hpp  VulkanTutorial4GuiTests.hpp  VulkanTutorial5GuiTests.hpp  VulkanTutorial6GuiTests.hpp  VulkanTutorial7GuiTests.hpp  VulkanTutorial8GuiTests.hpp  VulkanTutorial9GuiTests.hpp
src/test/cpp/gui/vulkan-tutorial-com/: VulkanTutorialCom1GuiTests.hpp  VulkanTutorialCom2GuiTests.hpp  VulkanTutorialCom3GuiTests.hpp
src/test/cpp/unit/: GlmUnitTests.hpp  OtherUnitTests.hpp  StringVectorUnitTests.hpp
src/test/resources/: logging-config.txt
src/test/resources/VulkanTutorialCom3GuiTests/test1/: 1.vert
src/test/resources/clion/gtest/: filter-run.xml
src/test/resources/shader/: shader-1.frag  shader-1.vert  shader-10.vert  shader-2.frag  shader-2.vert  shader-3.vert  shader-4.frag  shader-5.vert  shadow-shader-5.frag  shadow-shader-5.vert
src/test/resources/vscode/: launch.json  tasks.json
